# torchpick

./: .gitignore  Dockerfile  README.md  devcontainer.json  generate.py  pyproject.toml
.github/workflows/: build.yml  devcontainer.yml
hooks/: generate_metadata.py
